--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
             </select>
 
             <select name="country" id="countryId" class="covidCanvas" onchange="updateChart()">
-                <option value="india" selected>Worldwide</option>
+                <option value="Worldwide" selected>Worldwide</option>
             </select>
 
         </div>
