--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
         <div class="topnav" id="topnavId">
             <a href="#home" class="active navlink" onclick="toggleNav(event)">Home</a>
             <a href="#about" class="navlink" onclick="toggleNav(event)">About</a>
-            <a href="#projects" class="navlink" onclick="toggleNav(event)">Projects</a>
+            <!-- <a href="#projects" class="navlink" onclick="toggleNav(event)">Projects</a> -->
+            <a href="#projects" class="navlink" onclick="toggleNav(event)">JS Games</a>
             <a href="#contact" class="navlink" onclick="toggleNav(event)">Contact</a>
             <a href="javascript:void(0);" class="icon" onclick="toggleNav(event)">
                 <i class="fa fa-bars"></i>
@@ -142,14 +143,15 @@
     <!-- PROJECTS Section -->
 
     <section id="projects">
-        <p class="section-heading">SOME SKILL SHOWCASE</p>
+        <!-- <p class="section-heading">SOME SKILL SHOWCASE</p> -->
+        <p class="section-heading">FUN ZONE</p>
         <div id="tabs">
             <div class="container">
                 <div class="tab-item tab-border" id="tab-1">
                     <i class="fas fa-gamepad fa-2x"></i>
                     <p>JS Games</p>
                 </div>
-                <div class="tab-item" id="tab-2">
+                <!-- <div class="tab-item" id="tab-2">
                     <i class="fab fa-css3-alt fa-2x"></i>
                     <p>CSS3</p>
                 </div>
@@ -168,7 +170,7 @@
                 <div class="tab-item" id="tab-6">
                     <i class="fas fa-layer-group fa-2x"></i>
                     <p>MEAN Stack</p>
-                </div>
+                </div> -->
             </div>
         </div>
 
