--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script SameSite="none" src="https://kit.fontawesome.com/4686fc24da.js"></script>
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="favicon/favicon.ico" type="image/x-icon">
-    <title>Saurabh Burman - Web Developer Profile</title>
+    <title>Saurabh Burman - Web Developer</title>
 </head>
 
 <body>
@@ -88,6 +88,7 @@
                 </div>
             </div>
             <div id="about-bottom">
+                <h2 style="color: black">🌱My key Skills are ...</h2>
                 <div id="progress-bar">
                     <div class="progress" id="javascript-progress">
                         <span>Javascript</span>
@@ -315,7 +316,7 @@
 
     <!-- CONTACT Section -->
     <section id="contact">
-        <p class="section-heading">CONTACT</p>
+        <p class="section-heading">💞️ I’m looking to collaborate</p>
         <div class="container">
             <form onsubmit="sendEmail(this, event)">
                 <label for="fname">First Name</label>
