updated cv file

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
     </header>
 
-    <a class="resumeLink" href="./media/Saurabh Burman Resume.pdf" title="Download Resume" target="_blank"><img
+    <a class="resumeLink" href="./media/Saurabh Burman - Resume.pdf" title="Download Resume" target="_blank"><img
             src="./media/images/resume-icon-png.jpg" alt=""></a>
 
     <a class="covid19Link" title="Covid19 Statistics" onclick="showCovidScreen()" href="">
