--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
     <!-- FOOTER Section -->
     <footer id="footer">
         <div id="social-media">
-            <a href="#" target="_blank">
+            <a href="www.linkedin.com/in/saurabh-burman" target="_blank">
                 <div class="social-icon" id="icon-1">
                     <i class="fab fa-linkedin fa-2x"></i>
                 </div>
@@ -358,16 +358,16 @@
                     <i class="fab fa-facebook fa-2x"></i>
                 </div>
             </a>
-            <a href="#" target="_blank">
+            <a href="https://github.com/burman-saurabh" target="_blank">
                 <div class="social-icon" id="icon-3">
                     <i class="fab fa-github fa-2x"></i>
                 </div>
             </a>
-            <a href="#" target="_blank">
+            <!-- <a href="#" target="_blank">
                 <div class="social-icon" id="icon-4">
                     <i class="fab fa-codepen fa-2x"></i>
                 </div>
-            </a>
+            </a> -->
         </div>
         <p>Copyright &copy; <span id="year"></span></p>
     </footer>
