--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
     <!-- FOOTER Section -->
     <footer id="footer">
         <div id="social-media">
-            <a href="www.linkedin.com/in/saurabh-burman" target="_blank">
+            <a href="https://www.linkedin.com/in/saurabh-burman" target="_blank">
                 <div class="social-icon" id="icon-1">
                     <i class="fab fa-linkedin fa-2x"></i>
                 </div>
